# TaskEstimatorAssistant

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.bot  Makefile  QUICK_START.md  README.md  SPRINT_F1_COMPLETED.md  SPRINT_F2_COMPLETED.md  SPRINT_S1_COMPLETED.md  alembic.ini  docker-compose.registry.yml  docker-compose.yml  pyproject.toml
.cursor/commands/: review.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc  workflow_tech_debt.mdc
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 40e799463869_add_chat_tables.py  e7d81f36ca19_initial_schema.py
devops/doc/: devops-roadmap.md
devops/doc/plans/: sprint-d0-implementation.md  sprint-d1-implementation.md
doc/: deployment-guide.md  frontend-roadmap.md  real-data-implementation.md  roadmap.md  sprint-f1-deliverables.md  sprint-f1-files.txt  sprint-f1-implementation.md  sprint-f1-summary.md  sprint-f2-files.txt  sprint-f2-implementation.md  sprint-f4-implementation.md  sprint-f4-quickstart.md  sprint-f4-summary.md  sprint-s1-implementation.md  sprint-s1-summary.md  stats-api-contract.json  stats-api-quickstart.md
doc/tasklists/: tasklist-S0.md
docs/: README_TESTING.md  cursor_setup.md  idea.md  tasklist.md  tasklist_tech_debt.md  test_ui_quickstart.md  test_ui_setup_summary.md  testing_ui_guide.md  vision.md
frontend/: .dockerignore  .eslintrc.json  Dockerfile  HYDRATION_FIX.md  README.md  SPRINT_S3_QUICKSTART.md  SPRINT_S3_SUMMARY.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/dashboard/: activity-chart.tsx  recent-conversations.tsx  stat-cards.tsx  top-users.tsx
frontend/components/layout/: app-header.tsx  app-sidebar.tsx  dashboard-layout.tsx
frontend/components/ui/: ai-chat.tsx  chat-floating-button.tsx
frontend/doc/: front-vision.md
frontend/hooks/: use-chat.ts  use-stats.ts
frontend/lib/: api.ts
frontend/types/: chat.ts  stats.ts
prompts/: system_prompt.txt
scripts/: check_db_data.py  check_week_data.py  seed_test_data.py
src/: api_main.py  main.py
src/api/: __init__.py  chat_api.py  dependencies.py  models.py  stats_api.py
src/bot/: __init__.py  message_handler.py  telegram_bot.py
src/chat/: __init__.py  admin_handler.py  chat_handler.py
src/config/: settings.py
src/db/: __init__.py  database.py  models.py  repository.py
src/llm/: __init__.py  conversation.py  llm_client.py
src/stats/: __init__.py  collector.py  mock_collector.py  real_collector.py
tests/: __init__.py  conftest.py  test_conversation.py  test_llm_client.py  test_message_handler.py  test_settings.py
